dynamic/stg1/s20-dev-nat-gateways.yaml
AWSTemplateFormatVersion: 2010-09-09
Description:  Adds NATGateway functionality to the subnets
Resources:
  EIPA:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EIPB:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EIPC:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NatGatewayA:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPA.AllocationId
      SubnetId: !ImportValue jy-vpc-stg1-subnet-puba
  NatGatewayB:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPB.AllocationId
      SubnetId: !ImportValue jy-vpc-stg1-subnet-pubb
  NatGatewayC:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt EIPC.AllocationId
      SubnetId: !ImportValue jy-vpc-stg1-subnet-pubc
  RouteTablePrivateA: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !ImportValue jy-vpc-stg1
      Tags:
      - Key: Name
        Value: jy-vpc-stg1-rt-privateA
  RouteTablePrivateB: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !ImportValue jy-vpc-stg1
      Tags:
      - Key: Name
        Value: jy-vpc-stg1-rt-privateB
  RouteTablePrivateC: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !ImportValue jy-vpc-stg1
      Tags:
      - Key: Name
        Value: jy-vpc-stg1-rt-privateC
  RouteNatGWA: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivateA
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayA
  RouteNatGWB: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivateB
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayB
  RouteNatGWC: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivateC
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGatewayC
  RouteTableAssociationReservedA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-apia
      RouteTableId: !Ref RouteTablePrivateA
  RouteTableAssociationAppA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-mla
      RouteTableId: !Ref RouteTablePrivateA
  RouteTableAssociationDBA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-configa
      RouteTableId: !Ref RouteTablePrivateA
  RouteTableAssociationReservedB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-apib
      RouteTableId: !Ref RouteTablePrivateB
  RouteTableAssociationAppB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-mlb
      RouteTableId: !Ref RouteTablePrivateB
  RouteTableAssociationDBB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-configb
      RouteTableId: !Ref RouteTablePrivateB
  RouteTableAssociationReservedC:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-apic
      RouteTableId: !Ref RouteTablePrivateC
  RouteTableAssociationAppC:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-mlc
      RouteTableId: !Ref RouteTablePrivateC
  RouteTableAssociationDBC:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !ImportValue jy-vpc-stg1-subnet-configc
      RouteTableId: !Ref RouteTablePrivateC
